--- a/frontend/templates/piecharts.html
+++ b/frontend/templates/piecharts.html
@@ -108,7 +108,7 @@
     </script>
 </head>
 <body>
-    <h1>My Pie Charts</h1>
+    <h1>Summaries</h1>
 
     <div class="chart-container">
         <div id="chart1"></div>
